fix thread.getId after cherry picking